# LLGL

cmake/: FindOpenXRDeps.cmake
include/LLGL/: XRSystemFlags.h
sources/Renderer/Vulkan/: VKPhysicalDevice.cpp  VKRenderSystem.cpp  VKRenderSystem.h  VKSwapChain.cpp
sources/Renderer/Vulkan/Ext/: VKExtensionRegistry.cpp  VKExtensionRegistry.h
sources/Renderer/Vulkan/OpenXR/: VKOpenXRGraphicsBinding.cpp
sources/XR/OpenXR/: CMakeLists.txt
